tests/neg/i7575.scala
class Foo() extends Dynamic // error: extension of type scala.Dynamic needs to be enabled
// tested as is and with -language:_
